# MPX-dashboard

./: .gitignore  .tmp.txt.swp  Dockerfile  app.py  csv_specs.py  dag_attempt.py  docker-compose.yml  functions.py  pyproject.toml  testing.py  utils.py
data/: population.csv
data/cases.parquet/: bbf5e612e0504337a650cafc7cf30b09-0.parquet
data/deaths.parquet/: 12799f85f4d54bda8913a16cd9283303-0.parquet
data/sus_cases.parquet/: 284fc6c43b9d4e868ff0783ac3b5d783-0.parquet
data/sus_deaths.parquet/: 65369a14c2ad4b5eac7bf73d9087f5b0-0.parquet
mpx_dashboard/: app.py  functions.py  plotting.py  population.csv  postprocess.py  read_write.py
