[tool.poetry]
name = "mpx-dashboard"
version = "0.1.0"
description = "Dashboard based on daily updated Monkeypox case and death records, facilitating the visualization og the global dynamics of this disease."
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>", "Nico Ricardi <ricardiniccolo@gmail.com>"]
license = "MIT"
packages = [{include='mpx_dashboard'}]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.5.1"
pandas = "^1.4.1"
numpy = "^1.22.2"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
plotly = "^5.10.0"
epigraphhub = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

